# sgrep

./: Cargo.toml  LICENSE  README.md  bench_tokens.sh  install.sh  package.json  setup-mcp.sh
.github/workflows/: codeql.yml  release.yml
.searchgrep/: map.json
Formula/: searchgrep.rb
benchmarks/: README.md
benchmarks/scripts/: benchmark.sh
npm/: README.md  package.json
npm/scripts/: install.js
scripts/: mcp-wrapper.js  postinstall.js
src/: index.ts  main.rs
src/commands/: claude.ts  clean.rs  compile.rs  config.rs  graph.rs  history.rs  index.rs  index.ts  mod.rs  search.rs  status.rs  watch.rs
src/core/: chunker.rs  codemap.rs  config.rs  daemon.rs  embeddings.rs  fast_indexer.rs  git.rs  graph.rs  hf_inference.rs  hybrid_embedder.rs  local_embeddings.rs  mod.rs  nomic_bert.rs  reranker.rs  scanner.rs  search.rs  store.rs  treesitter_chunker.rs  vector_index.rs
src/lib/: file.ts  scaling.ts
src/mcp/: mod.rs  protocol.rs  server.rs
src/ui/: mod.rs  progress.rs  search_display.rs  theme.rs
